--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^3.12.0",
+    "apollo-server-express": "^3.12.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "graphql": "^16.7.1",
     "nodemon": "^3.0.1"
   }
 }
