--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "graphql": "^16.7.1",
     "graphql-tools": "^9.0.0",
+    "mongoose": "^7.4.1",
     "nodemon": "^3.0.1"
   }
 }
